Button stretch in reviews section fixed

--- a/app/styles/sections/_reviews.scss
+++ b/app/styles/sections/_reviews.scss
@@ -63,6 +63,7 @@
 
 .review__button {
 	background-color: $dark-text;
+	display: inline-block;
 	&:hover {
 		background-color: $button-hover-dark;
 	}
